@@ -3,12 +3,7 @@
 
 #include <LuceneKit/Java/LCReader.h>
 
-#ifdef HAVE_UKTEST
-#include <UnitKit/UnitKit.h>
-@interface LCStringReader: NSObject <LCReader, UKTest>
-#else
 @interface LCStringReader: NSObject <LCReader>
-#endif
 {
 	unsigned int pos;
 	NSString * source; 
@@ -18,3 +13,4 @@
 @end
 
 #endif /* __LUCENE_JAVA_STRING_READER__ */
+
