@@ -138,142 +138,3 @@ static char BYTE_COUNTS[] = {	  // table of bits/byte
 
 @end
 
-#ifdef HAVE_UKTEST
-
-#include <LuceneKit/Store/LCRAMDirectory.h>
-
-@implementation LCBitVector (UKTest_Additions)
-
-- (void) doTestConstructOfSize: (int) n
-{
-	self = [self initWithSize: n];
-	UKIntsEqual(n, [self size]);
-}
-
-- (void) doTestGetSetVectorOfSize: (int) n
-{
-	self = [self initWithSize: n];
-	int i;
-	for(i = 0; i < [self size]; i++) 
-    {
-		UKFalse([self bit: i]);
-		[self setBit: i];
-		UKTrue([self bit: i]);
-    }
-}
-
-- (void) doTestClearVectorOfSize: (int) n
-{
-	self = [self initWithSize: n];
-	int i;
-	for(i = 0; i < [self size]; i++) 
-    {
-		UKFalse([self bit: i]);
-		[self setBit: i];
-		UKTrue([self bit: i]);
-		[self clearBit: i];
-		UKFalse([self bit: i]);
-    }
-}
-
-- (void) doTestCountVectorOfSize: (int) n 
-{
-	self = [self initWithSize: n];
-	int i;
-	for(i = 0; i < [self size]; i++) 
-    {
-		UKFalse([self bit: i]);
-		UKIntsEqual(i, [self count]);
-		[self setBit: i];
-		UKTrue([self bit: i]);
-		UKIntsEqual(i+1, [self count]);
-    }
-	
-	self = [self initWithSize: n];
-	// bv = [[LCBitVector alloc] initWithSize: n];
-	for(i = 0; i < [self size]; i++) 
-    {
-		UKFalse([self bit: i]);
-		UKIntsEqual(0, [self count]);
-		[self setBit: i];
-		UKTrue([self bit: i]);
-		UKIntsEqual(1, [self count]);
-		[self clearBit: i];
-		UKFalse([self bit: i]);
-		UKIntsEqual(0, [self count]);
-    }
-}
-
-- (BOOL) doCompare: (LCBitVector *) other
-{
-	int i;
-	for(i = 0; i < [self size]; i++)
-	{
-		// bits must be equal
-		if([self bit: i] != [other bit: i]) 
-		{
-			return NO;
-		}
-	}
-	return YES;
-}
-
-- (void) doTestWriteRead: (int) n
-{
-	id <LCDirectory> d = [[LCRAMDirectory alloc] init];
-	LCBitVector *compare;
-	self = [self initWithSize: n];
-	// test count when incrementally setting bits
-	int i;
-	for(i = 0; i < [self size]; i++) 
-    {
-		UKFalse([self bit: i]);
-		UKIntsEqual(i, [self count]);
-		[self setBit: i];
-		UKTrue([self bit: i]);
-		UKIntsEqual(i+1, [self count]);
-		[self writeToDirectory: d name: @"TESTBV"];
-		
-		compare = [[LCBitVector alloc] initWithDirectory: d
-												 name: @"TESTBV"];
-		// compare bit vectors with bits set incrementally
-		UKTrue([self doCompare: compare]);
-		RELEASE(compare);
-    }
-	RELEASE(d);
-}
-
-- (void) testAll
-{
-	[self doTestConstructOfSize: 8];
-	[self doTestConstructOfSize: 20];
-	[self doTestConstructOfSize: 100];
-	[self doTestConstructOfSize: 1000];
-	
-	[self doTestGetSetVectorOfSize: 8];
-	[self doTestGetSetVectorOfSize: 20];
-	[self doTestGetSetVectorOfSize: 100];
-	[self doTestGetSetVectorOfSize: 1000];
-	
-	[self doTestClearVectorOfSize: 8];
-	[self doTestClearVectorOfSize: 20];
-	[self doTestClearVectorOfSize: 100];
-	[self doTestClearVectorOfSize: 1000];
-	
-	[self doTestCountVectorOfSize: 8];
-	[self doTestCountVectorOfSize: 20];
-	[self doTestCountVectorOfSize: 100];
-	[self doTestCountVectorOfSize: 1000];
-}
-
-- (void) testWriteRead
-{
-	[self doTestWriteRead: 8];
-	[self doTestWriteRead: 20];
-	[self doTestWriteRead: 100];
-	[self doTestWriteRead: 1000];
-}
-
-@end
-
-#endif
